# noxueui

./: .env  Cargo.toml  index.html  readme.md  upload.php
src/: error.rs  hooks.rs  main.rs  pages.rs  route.rs  service.rs  types.rs
src/pages/: ask.rs  common.rs  forget.rs  index.rs  login.rs  logout.rs  provider.rs  register.rs
src/pages/ask/: ask.rs
src/pages/common/: editor.rs  footer.rs  header.rs  utils.rs
src/pages/common/editor/: editor.css  editor.js  editor.rs  highlight.min.js
src/pages/common/header/: header.rs
src/service/: auth.rs  request.rs
src/types/: auth.rs
