[package]
edition = "2021"
name = "noxueui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
gloo = "0.6"
lazy_static = "1.4.0"
log = "0.4"
parking_lot = "0.12.0"
reqwest = {version = "0.11.9", features = ["json"]}
serde = "1"
thiserror = "1"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
web-sys = "0.3"
yew = "0.19.3"
yew-hooks = "0.1.20"
yew-router = "0.16"
